# FFB_Smart_Manager

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
agents/: baseline_agents.py  genome_draft_agent.py  neural_draft_agent.py  neural_lineup_agent.py  neural_trade_agent.py  neural_waiver_agent.py  random_agent.py  trade_agent.py  waiver_agent.py
evolution/: full_season.py  genome.py  multi_season_evaluation.py  neural_policy_training.py  population.py  projection_mode_comparison.py  training.py  training_graph.py
fantasy_engine/: draft.py  fake_data.py  fantasy_points.py  historical_loader.py  historical_player_pool.py  historical_seasons.py  historical_simulation.py  league.py  leakage_safe_player_pool.py  lineup.py  player.py  playoffs.py  processed_season.py  projection_dataset.py  scoring.py  season.py  synthetic_season.py  team.py  transactions.py  weekly_data.py  weekly_projection.py  weekly_projection_dataset.py  weekly_season_simulation.py  weekly_simulation.py
models/: __init__.py  draft_projection_nn.py  manager_policy_nn.py  projection_service.py  weekly_projection_nn.py  weekly_projection_service.py
scripts/: audit_historical_data.py  compare_projection_modes.py  evaluate_manager_multi_season.py  evaluate_real_policy_holdout.py  evaluate_real_policy_walk_forward.py  evaluate_synthetic_policy_real_seasons.py  load_2021_player_stats.py  rebuild_2021_processed_season.py  run_2021_historical_simulation.py  run_2021_real_training_experiment.py  run_2021_weekly_season_simulation.py  run_full_season_training_experiment.py  (+8 more)
tests/: test_draft.py  (+47 more)
(+2 files in other folders)
