[project]
name = "ffb-smart-manager"
version = "0.1.0"
description = "Fantasy football AI manager and simulation engine."
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
